[tool.poetry]
name = "reinforcement_learning_example"
authors = [
    "Luke Tonin <email@example.com>"
]
license = "MIT license"
version = "0.1.0"
description = ""
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies] 
pytest = "^7.1"
black = "^22.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
